--- a/src/app/features/lms/grp/components/dashboard/components/admin-policy-details/admin-policy-details.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/admin-policy-details/admin-policy-details.component.html
@@ -310,34 +310,44 @@ aria-labelledby="categorySummaryModal" aria-hidden="true" (click)="onBackdropCli
 
         <div class="modal-body">
             <div class="multiselect-add">
-                <p-multiSelect [options]="columnOptionsMemberDets" [(ngModel)]="selectedColumnsMemberDets">
+                <p-multiSelect [options]="columnOptionsCatDets" [(ngModel)]="selectedColumnsCatDets" [filter]="false">
                 </p-multiSelect>
               </div>
             
             <div class="">
-                <p-table [value]="membersDetails" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
-[tableStyle]="{'min-width': '50rem'}"
-currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-[rowsPerPageOptions]="[10,25,50]" styleClass="p-datatable-striped">
-<ng-template pTemplate="header">
-<tr>
-<th style="width: calc(100% / 5);" *ngIf="selectedColumnsMemberDets.includes('surname')">Category</th>
-<th style="width: calc(100% / 5);" *ngIf="selectedColumnsMemberDets.includes('other_names')">Multiple of earning</th>
-<th style="width: calc(100% / 5);" style="text-align: right;" *ngIf="selectedColumnsMemberDets.includes('total_sum_assured')">Access group</th>
-<th style="width: calc(100% / 5);" style="text-align: right;" *ngIf="selectedColumnsMemberDets.includes('total_sum_assured')">Select rates</th>
-<th style="width: calc(100% / 5);" *ngIf="selectedColumnsMemberDets.includes('date_of_birth')">Premium mask</th>
-</tr>
-</ng-template>
-<ng-template pTemplate="body" let-membersDetails let-rowIndex="rowIndex">
-<tr>
-<td style="width: calc(100% / 5);" *ngIf="selectedColumnsMemberDets.includes('surname')">{{ membersDetails.surname | titlecase }}</td>
-<td style="width: calc(100% / 5);" *ngIf="selectedColumnsMemberDets.includes('other_names')">{{ membersDetails.other_names | titlecase }}</td>
-<td style="width: calc(100% / 5);" style="text-align: right;" *ngIf="selectedColumnsMemberDets.includes('total_sum_assured')">{{ membersDetails.premium | number }}</td>
-<td style="width: calc(100% / 5);" style="text-align: right;" *ngIf="selectedColumnsMemberDets.includes('total_sum_assured')">{{ membersDetails.total_sum_assured | number }}</td>
-<td style="width: calc(100% / 5);" *ngIf="selectedColumnsMemberDets.includes('date_of_birth')">{{ membersDetails.date_of_birth }}</td>
-</tr>
-</ng-template>
-</p-table>
+                <p-table [value]="categorySummary" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
+                    [tableStyle]="{'min-width': '50rem'}"
+                    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]"
+                    styleClass="p-datatable-striped">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('category_category')">Category</th>
+                            <th style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('period')">Multiple of
+                                earning</th>
+                            <th style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('policy_access_group')">Access
+                                group</th>
+                            <th style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('use_cvr_rate')">Select
+                                rates</th>
+                            <th style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('premium_mask_desc')">Premium mask
+                            </th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-item let-rowIndex="rowIndex">
+                        <tr (click)="onCategoryDetailsTableRowClick(item, rowIndex)" [ngClass]="{'selected-row': rowIndex === selectedRowIndex}" style="cursor: pointer">
+                            <td style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('category_category')">{{
+                                item.category_category | titlecase }}</td>
+                            <td style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('period')">{{
+                                item.period }}</td>
+                            <td style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('policy_access_group')">{{
+                                item.policy_access_group | titlecase }}
+                            </td>
+                            <td style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('use_cvr_rate')">{{
+                                item.use_cvr_rate | titlecase }}</td>
+                            <td style="width: calc(100% / 5);" *ngIf="selectedColumnsCatDets.includes('premium_mask_desc')">{{
+                                item.premium_mask_desc | titlecase }}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
 
             </div>
 
