--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
@@ -669,7 +669,7 @@
                 </form>
             </div>
             <div class="d-flex justify-content-end">
-                <button type="button" class="btn btn-primary" (click)="addPolicyRisk()">Save</button>
+                <button type="button" class="btn btn-primary mb-4" (click)="addPolicyRisk()">Save</button>
             </div>
         </div>
         <!-- SECTION DETAILS -->
