--- a/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
@@ -4,23 +4,27 @@
 
     <div class="container mt-4">
         <!-- TABS CARDS -->
-         <div class="card mb-3">
+        <div class="card mb-3">
             <div class="card-body">
                 <ul class="nav">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home">Policy Details</a>
+                        <a class="nav-link active" aria-current="page" id="pills-home-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-home">Policy Details</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-policy-other-details">Policy other details</a>
+                        <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-policy-other-details">Policy other details</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link"  id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact">Risk Details</a>
+                        <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-contact">Risk Details</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact">Reports and documents</a>
-                  </ul>
+                        <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-contact">Reports and documents</a>
+                </ul>
 
-                
+
             </div>
         </div>
 
@@ -37,18 +41,8 @@
                     <app-policy-summary-other-details></app-policy-summary-other-details>      
                     
                 </div>
-                <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
-              </div>
+            </div>
         </div>
-    </div>
 
     </div>
 </div>
-   
-      
-      
-           
-               
-            
-     
-
