VQ-2158: Claims Initiation

--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
@@ -32,7 +32,7 @@
 
               <div class="col-lg-4 col-md-6">
                 <label for="claimType" class="quote-label text-black fw-medium" style="font-size:1rem;">
-                  Claim type
+                  Claim Type
                 </label>
                 <select class="form-select form-select mb-1 w-75" id="claimType" placement="right">
                   <option selected="true" disabled="disabled"></option>
@@ -53,11 +53,11 @@
     <div class="col-sm-12">
       <div class="full-border" style="position: relative">
         <div class="row g-3">
-          <div class="fw-medium" style="font-size: 1.25rem;">Claim details</div>
+          <div class="fw-medium" style="font-size: 1.25rem;">Claim Details</div>
 
             <div class="col-lg-4 col-md-6">
               <label for="" class="quote-label text-black fw-medium" style="font-size:1rem;">
-                Claim on life
+                Claim on Life
               </label>
               <select class="form-select form-select mb-1 w-75" placement="right">
                 <option selected="true" disabled="disabled"></option>
@@ -79,7 +79,7 @@
 
             <div class="col-lg-4 col-md-6">
               <label for="" class="quote-label text-black fw-medium" style="font-size:1rem;">
-                Causation cause
+                Causation Cause
               </label>
               <select class="form-select form-select mb-1 w-75" placement="right">
                 <option selected="true" disabled="disabled"></option>
@@ -88,28 +88,28 @@
 
             <div class="col-lg-4 col-md-6">
               <label for="" class="quote-label text-black fw-medium" style="font-size:1rem;">
-                Date of incident
+                Date of Incident
               </label>
               <input type="date" class="form-control mb-1" id="">
             </div>
 
             <div class="col-lg-4 col-md-6">
               <label for="" class="quote-label text-black fw-medium" style="font-size:1rem;">
-                Date reported
+                Date Reported
               </label>
               <input type="date" class="form-control mb-1" id="">
             </div>
 
             <div class="col-lg-4 col-md-6">
               <label for="" class="quote-label text-black fw-medium" style="font-size:1rem;">
-                Location of incident
+                Location of Incident
               </label>
               <input type="text" class="form-control mb-1" id="">
             </div>
 
             <div class="col-lg-4 col-md-6">
               <label for="" class="quote-label text-black fw-medium" style="font-size:1rem;">
-                Override incubation period
+                Override Incubation Period
               </label>
               <div class="form-check radio-group" id="">
                 <input class="form-check-input box" type="radio">
@@ -172,7 +172,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="label">
               <label for="" class="quote-label text-black fw-medium" style="font-size:1rem;">
-                Death certificate <span style="color: red;">*</span>
+                Death Certificate <span style="color: red;">*</span>
               </label>
             </div>
             
